tests/paczka1/small_fuzzy/35222747.err
Error in line 1: qNokjF A591 28,9
Error in line 11: OsrKPB S737 70,0
